feat: normalizando strings processadas na criação de um full game pelo thymeleaf